<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="370dp"
    android:layout_height="220dp"
    android:layout_gravity="center_horizontal"
    android:background="@color/weatherbug_blue"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="top"
        android:background="#a7a9ac"
        android:gravity="left|center"
        android:paddingLeft="10dp"
        android:text="@string/configure_header"
        android:textColor="#010101"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:gravity="center_horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/zipcode_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configure_label"
            android:textColor="#010101"
            android:layout_gravity="left|center"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/zipcode"
            android:layout_width="224dp"
            android:layout_height="40dp"
            android:textColor="#010101"
            android:ems="10"
            android:inputType="number"
            android:layout_gravity="right|center"
            android:background="@drawable/zipcode_box_shape"
            android:layout_marginLeft="6dp"
            android:maxLength="5" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:paddingBottom="40dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
         >

        <Button
            android:id="@+id/okbutton"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="left|top"
            android:background="@drawable/button_shape"
            android:text="@string/configure_btn_submit"
            android:textColor="#58595c"
        	android:textSize="16dp" />

        <Button
            android:id="@+id/cancelbutton"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="right|top"
            android:layout_marginLeft="50dp"
            android:background="@drawable/button_shape"
            android:text="@string/configure_btn_cancel"
            android:textColor="#58595c"
            android:textSize="16dp" />

    </LinearLayout>

</LinearLayout>